flowrecord display refresh
add staffInfo and processType to display

--- a/src/webapp/manage/index.html
+++ b/src/webapp/manage/index.html
@@ -41,7 +41,8 @@
 			<h3><img src="images/logo1.jpg" alt=""></h3>
 			<a class="aFirst alarmInformation" href="#">报警信息显示</a> 
 			<a class = "orderInformation" href="#">订单信息统计</a> 
-			<a class = "equipmentUtilization" href="#">设备使用率</a> 
+			<a class = "equipmentUtilization" href="#">设备使用率</a>
+			<a class = "itemManage" href="#">器械管理</a> 
 		</nav>
 		<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s5">
 			<h3><img src="images/logo1.jpg" alt=""></h3>
