--- a/src/webapp/manage/rightsManagement/html/addStaff.html
+++ b/src/webapp/manage/rightsManagement/html/addStaff.html
@@ -32,17 +32,18 @@
 			<input id = "girl" name = "sex" type = "radio">
 			<input type = "number" min = "18" max = "100" placeholder = "年龄">
 			<select id = "keshi">
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
+				<option>科室一</option>
+				<option>科室二</option>
+				<option>科室三</option>
+				<option>科室四</option>
+				<option>科室五</option>
 			</select>
 			<label for = "Resignation">离职</label>
 			<input id = "Resignation" name = "status" type = "radio">
 			<label for = "Work">在职</label>
 			<input id = "Work" name = "status" type = "radio">
-			<input style = "float:right;" type = "button" value = "确定添加">
+			<div class="clear"></div>
+			<input type = "button" value = "确定添加">
 		</div>
 
 		 
