--- a/src/webapp/manage/rightsManagement/html/addUser.html
+++ b/src/webapp/manage/rightsManagement/html/addUser.html
@@ -10,18 +10,18 @@
 
 </head>
 <body>
-	<h1>添加用户</h1> 
+	<h1>添加用户</h1>
 	<form>
 		<div class = "left">
-			<span>用户名ID</span>
+			<!-- <span>用户名ID</span> -->
 			<span>用户名</span>
 			<span>密码</span>
 			<span>员工账号</span>
 			<span>权限</span>
-
+			<span>医院ID</span>
 		</div>
 		<div class = "right">
-			<input type = "text" readonly = "true"> 
+			<!-- <input type = "text" readonly = "true">  -->
 			<input type = "text"> 
 			<input type = "password"> 
 			<label for = "yes">是</label>
@@ -29,20 +29,18 @@
 			<label for = "no">否</label>
 			<input id = "no" name = "employeeAccount" type = "radio">
 			<select id = "name">
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
-				<option>对设备信息的的操作权限</option>
+				<option>对设备信息的的操作权限一</option>
+				<option>对设备信息的的操作权限二</option>
+				<option>对设备信息的的操作权限三</option>
+				<option>对设备信息的的操作权限四</option>
+				<option>对设备信息的的操作权限五</option>
 			</select>
-			<a href="">添加权限</a>
+			<!-- <a href="">添加权限</a> -->
+			<input type = "text"> 
 			<input type = "button" value = "确定添加">
 		</div>
-
-		 
+		<div class="clear"></div>
 	</form>
-	 
-	 
 	
 </body>
 </html>
