--- a/src/webapp/manage/rightsManagement/html/staffQueries.html
+++ b/src/webapp/manage/rightsManagement/html/staffQueries.html
@@ -15,17 +15,17 @@
 	</section>
 	<table>
 		<tr>
+			<th class="check"></th>
 			<th class = "first">职员ID</th>
 			<th class = "second">姓名</th>
 			<th class = "third">电话</th>
 			<th class = "fourth">性别</th>
 			<th class = "fifth">年龄</th>
-			<th class = "sixth">所属科室</th>
-			<th class = "seventh">入厂时间</th>
-			<th class = "eighth">创建时间</th>
-			<th class = "ninth">修改时间</th>
+			<th class = "sixth">部门编号</th>
+			<th class = "seventh">入职时间</th>
 		</tr>
 		<tr>
+			<td><input type="checkbox" ></td>
 			<td class = "first"></td>
 			<td class = "second"></td>
 			<td class = "third"></td>
@@ -33,151 +33,6 @@
 			<td class = "fifth"></td>
 			<td class = "sixth"></td>
 			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
-		</tr>
-		<tr>
-			<td class = "first"></td>
-			<td class = "second"></td>
-			<td class = "third"></td>
-			<td class = "fourth"></td>
-			<td class = "fifth"></td>
-			<td class = "sixth"></td>
-			<td class = "seventh"></td>
-			<td class = "eighth"></td>
-			<td class = "ninth"></td>
 		</tr>
 	</table>
 	<div class = "page">
