--- a/src/webapp/manage/sectorManagement/html/alarmInformation.html
+++ b/src/webapp/manage/sectorManagement/html/alarmInformation.html
@@ -16,7 +16,7 @@
 	</section>
 	<table>
 		<tr>
-			<th class = "id">报警者ID</th>
+			<th class = "id">报警ID</th>
 			<th class = "content">报警内容</th>
 			<th class = "time">时间</th>
 		</tr>
@@ -26,6 +26,9 @@
 		<span href="javascript:;">-</span>
 		<a class = "next" href="javascript:;">下一页</a>
 	</div>
-	 
+	<script type="text/javascript" src = "../../js/jquery.min.js"></script>
+    <script type = "text/javascript" src = "../../js/mustache.js"></script>
+    <script type = "text/javascript" src = "../../js/jquery-ui-1.10.3.custom.min.js"></script>
+	<script type="text/javascript" src = "../js/alarmInformation.js"></script>
 </body>
 </html>
